--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="text_btn_color">#FFFFFF</color>
+    <color name="main_activity_background_color">#F4FAFF</color>
+    <color name="categories_btn_color">#525DC0</color>
+    <color name="favorites_btn_color">#E13E3E</color>
 </resources>
