--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -9,11 +9,12 @@
     </style>
 
     <style name="StyleNavButton" parent="Widget.Material3.Button">
-        <item name="android:textAppearance">@style/StyleTitle14</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/text_btn_color</item>
         <item name="android:fontFamily">@font/montserrat_alternates_medium</item>
         <item name="android:paddingHorizontal">14dp</item>
         <item name="android:paddingVertical">10dp</item>
-        <item name="android:textStyle">bold</item>
         <item name="cornerRadius">8dp</item>
     </style>
 
