--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="main_activity_background_color">#F4FAFF</color>
     <color name="categories_btn_color">#525DC0</color>
     <color name="favorites_btn_color">#E13E3E</color>
+    <color name="screen_name_color">#5F3678</color>
 </resources>
