--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -16,4 +16,16 @@
         <item name="cornerRadius">8dp</item>
     </style>
 
+    <style name="StyleScreenHeader" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/montserrat_alternates_medium</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/screen_name_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="backgroundTint">@color/main_activity_background_color</item>
+        <item name="android:paddingHorizontal">10dp</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="cornerRadius">8dp</item>
+    </style>
+
 </resources>
