RA-05 fix. accessing elements via binding; change id

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,7 +7,7 @@
     android:background="@color/main_activity_background_color">
 
     <TextView
-        android:id="@+id/FavoritesText"
+        android:id="@+id/tvFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_favorites"
