--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -6,7 +6,6 @@
     android:layout_centerVertical="true"
     android:layout_marginHorizontal="@dimen/main_padding_half"
     android:layout_marginBottom="@dimen/main_padding"
-    android:background="@drawable/shape_header_rounded_corners"
     android:backgroundTint="@color/text_btn_color"
     android:clickable="true"
     app:cardCornerRadius="@dimen/main_padding_half">
@@ -14,14 +13,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginEnd="0dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivCategoryImage"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:background="@drawable/shape_header_rounded_corners"
-            android:contentDescription="@string/burger"
             android:scaleType="centerCrop"
             android:src="@drawable/burger"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,24 +28,22 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvCategoryName"
             style="@style/StyleTitleCategories14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_padding_half"
             android:layout_marginTop="@dimen/main_padding_half"
-            android:layout_marginEnd="75dp"
             android:text="@string/title_burgers_category_text" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvCategoryDescription"
             style="@style/StyleDescriptionCategories12"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/main_padding_half"
-            android:layout_marginTop="@dimen/main_padding_half"
-            android:layout_marginEnd="@dimen/main_padding_half"
-            android:layout_marginBottom="@dimen/main_padding_half"
+            android:layout_margin="@dimen/main_padding_half"
+            android:layout_marginHorizontal="@dimen/main_padding_half"
+            android:layout_marginVertical="@dimen/main_padding_half"
             android:text="@string/description_burgers_category_text" />
     </LinearLayout>
 
