--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -13,8 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginEnd="0dp">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivCategoryImage"
@@ -34,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_padding_half"
             android:layout_marginTop="@dimen/main_padding_half"
+            android:layout_marginEnd="@dimen/main_padding_half"
             android:text="@string/title_burgers_category_text" />
 
         <TextView
