--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -5,7 +5,8 @@
     android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_activity_background_color"
+    android:background="@drawable/ripple_effect"
+    android:backgroundTint="@color/main_activity_background_color"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -50,6 +51,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:spanCount="2"
         tools:itemCount="6"
-        tools:listitem="@layout/item_layout" />
+        tools:listitem="@layout/item_category" />
 
 </LinearLayout>
