--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_padding_half"
-        android:layout_marginTop="@dimen/main_padding"
+
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,5 +52,7 @@
         app:spanCount="2"
         tools:itemCount="6"
         tools:listitem="@layout/item_category" />
+
+<!--    android:layout_marginTop="@dimen/main_padding"-->
 
 </LinearLayout>
