--- a/app/src/main/res/drawable/shape_header_rounded_corners.xml
+++ b/app/src/main/res/drawable/shape_header_rounded_corners.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/main_padding_half" />
     <solid android:color="@color/text_btn_color" />
-</selector>
+</shape>
