--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ripple_effect"
-    android:backgroundTint="@color/main_activity_background_color"
+    android:backgroundTint="@color/main_background_color"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="224dp">
+        android:layout_height="@dimen/top_screen_sheet">
 
         <ImageView
             android:id="@+id/imageCategories"
