--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="main_padding">16dp</dimen>
     <dimen name="main_padding_half">8dp</dimen>
+    <dimen name="top_screen_sheet">224dp</dimen>
+    <dimen name="end_margin_recipe">100dp</dimen>
 </resources>
