--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivCategoryImage"
+            android:id="@+id/ivRecipeImage"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:background="@drawable/shape_header_rounded_corners"
@@ -29,7 +29,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvCategoryName"
+            android:id="@+id/tvRecipeName"
             style="@style/StyleTitleCategories14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
