--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -20,18 +20,18 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/ivCategoryImage"
+            android:id="@+id/ivRecipeImage"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:contentDescription="@string/title_burgers_category_text"
             android:scaleType="centerCrop"
-            android:src="@drawable/burger"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/burger" />
 
         <TextView
-            android:id="@+id/tvCategoryName"
+            android:id="@+id/tvRecipeName"
             style="@style/StyleTitleCategories14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
