--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="main_padding_half">8dp</dimen>
     <dimen name="top_screen_sheet">224dp</dimen>
     <dimen name="end_margin_recipe">100dp</dimen>
+    <dimen name="height_top_screen_recipe">130dp</dimen>
 </resources>
