RA-13. implementation of a recipe screen without an ingredient counting mechanism

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="top_screen_sheet">224dp</dimen>
     <dimen name="end_margin_recipe">100dp</dimen>
     <dimen name="height_top_screen_recipe">130dp</dimen>
+    <dimen name="ingredient_padding">12dp</dimen>
 </resources>
