--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -1,16 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="@color/main_background_color"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvRecipeDescription"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:text="@string/title_recipe"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivRecipeHeaderImg"
+            android:layout_width="match_parent"
+            android:layout_height="224dp"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/image_category_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/burger" />
+
+        <TextView
+            android:id="@+id/tvRecipeHeaderText"
+            style="@style/StyleScreenHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/main_padding"
+            android:layout_marginBottom="@dimen/main_padding"
+            android:background="@drawable/shape_header_rounded_corners"
+            android:gravity="start"
+            app:layout_constraintBottom_toBottomOf="@+id/ivRecipeHeaderImg"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Бургеры с грибами и сыром" />
+
+        <LinearLayout
+            android:id="@+id/recipeLinearLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivRecipeHeaderImg"
+            tools:layoutManager="LinearLayoutManager">
+
+            <TextView
+                android:id="@+id/tvRecipeIngredientsTitle"
+                style="@style/StyleScreenHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/main_padding"
+                android:text="@string/title_ingredients"
+                app:layout_constraintStart_toStartOf="@+id/ivRecipeHeaderImg"
+                app:layout_constraintTop_toBottomOf="parent"
+                tools:text="ингредиенты" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvIngredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/main_padding"
+                android:background="@drawable/shape_header_rounded_corners"
+                android:backgroundTint="@color/text_btn_color"
+                android:text="@string/title_method"
+                app:layout_constraintStart_toStartOf="@+id/ivRecipeHeaderImg"
+                app:layout_constraintTop_toBottomOf="@+id/tvRecipeIngredientsTitle"
+                app:spanCount="1"
+                tools:itemCount="9"
+                tools:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/item_ingredient" />
+
+            <TextView
+                android:id="@+id/tvRecipeTitleMethod"
+                style="@style/StyleScreenHeader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/main_padding"
+                android:backgroundTint="@color/text_btn_color"
+                android:text="@string/title_method"
+                app:layout_constraintStart_toStartOf="@+id/ivRecipeHeaderImg"
+                app:layout_constraintTop_toBottomOf="@+id/rvIngredients"
+                tools:text="@string/title_method" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvMethod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/main_padding"
+                android:background="@drawable/shape_header_rounded_corners"
+                android:backgroundTint="@color/text_btn_color"
+                app:layout_constraintStart_toStartOf="@+id/ivRecipeHeaderImg"
+                app:layout_constraintTop_toBottomOf="@id/tvRecipeTitleMethod"
+                app:spanCount="1"
+                tools:itemCount="9"
+                tools:layoutManager="LinearLayoutManager"
+                tools:listitem="@layout/item_method" />
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
