--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -16,8 +16,8 @@
             android:id="@+id/ivRecipeHeaderImg"
             android:layout_width="match_parent"
             android:layout_height="224dp"
-            android:scaleType="centerCrop"
             android:contentDescription="@string/image_category_description"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +32,9 @@
             android:layout_marginBottom="@dimen/main_padding"
             android:background="@drawable/shape_header_rounded_corners"
             android:gravity="start"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="@+id/ivRecipeHeaderImg"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Бургеры с грибами и сыром" />
 
