--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -42,4 +42,9 @@
         <item name="cornerRadius">8dp</item>
     </style>
 
+    <style name="StyleTextIngredients">
+        <item name="fontFamily">@font/montserrat_alternates_medium</item>
+        <item name="textAllCaps">true</item>
+    </style>
+
 </resources>
