RA-13. fix. style for screen with ingredients

--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -18,7 +18,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Булочка для бургеров" />
+        tools:text="Пшеничная Мука" />
 
     <TextView
         android:id="@+id/tvRecipeIngredientCount"
