--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -43,9 +43,13 @@
     </style>
 
     <style name="StyleTextIngredients">
-        <item name="fontFamily">@font/montserrat_alternates_medium</item>
         <item name="textAllCaps">true</item>
         <item name="android:textColor">@color/description_categories_color</item>
+    </style>
+    
+    <style name="StyleTextCookingMethod">
+        <item name="android:textColor">@color/description_categories_color</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
