RA-14 Add SeekBar for ingredient calculation

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -50,16 +50,60 @@
             app:layout_constraintTop_toBottomOf="@+id/ivRecipeHeaderImg"
             tools:layoutManager="LinearLayoutManager">
 
-            <TextView
-                android:id="@+id/tvRecipeIngredientsTitle"
-                style="@style/StyleScreenHeader"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/main_padding"
-                android:text="@string/title_ingredients"
-                app:layout_constraintStart_toStartOf="@+id/ivRecipeHeaderImg"
-                app:layout_constraintTop_toBottomOf="parent"
-                tools:text="ингредиенты" />
+                android:layout_marginTop="@dimen/main_padding"
+                android:layout_marginBottom="@dimen/main_padding"
+                app:layout_constraintTop_toBottomOf="@+id/ivRecipeHeaderImg">
+
+                <TextView
+                    android:id="@+id/tvRecipeIngredientsTitle"
+                    style="@style/StyleScreenHeader"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/main_padding"
+                    android:text="@string/title_ingredients"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="parent"
+                    tools:text="ингредиенты" />
+
+                <TextView
+                    android:id="@+id/tvPortionsSubtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/ingredient_padding_half"
+                    android:fontFamily="@font/montserrat_alternates_medium"
+                    android:text="@string/title_portions"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toTopOf="@+id/sbPortionsCount"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvRecipeIngredientsTitle" />
+
+                <TextView
+                    android:id="@+id/tvPortionsCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/ingredient_padding_half"
+                    app:layout_constraintBottom_toBottomOf="@+id/tvPortionsSubtitle"
+                    app:layout_constraintStart_toEndOf="@+id/tvPortionsSubtitle"
+                    app:layout_constraintTop_toTopOf="@+id/tvPortionsSubtitle"
+                    tools:text="3" />
+
+                <androidx.appcompat.widget.AppCompatSeekBar
+                    android:id="@+id/sbPortionsCount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/ingredient_padding_half"
+                    android:max="5"
+                    android:min="1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvPortionsSubtitle"
+                    tools:progress="2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvIngredients"
