RA-15 Styling SeekBar with custom drawable

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -93,11 +93,10 @@
 
                 <androidx.appcompat.widget.AppCompatSeekBar
                     android:id="@+id/sbPortionsCount"
+                    style="@style/StyleSeekBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/ingredient_padding_half"
-                    android:max="5"
-                    android:min="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
