--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="favorites_btn_color">#E13E3E</color>
     <color name="description_categories_color">#666666</color>
     <color name="background_btn_categories_color">#5F3678</color>
+    <color name="seekbar_color">#A1A9F9</color>
 </resources>
