--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="height_top_screen_recipe">130dp</dimen>
     <dimen name="ingredient_padding">12dp</dimen>
     <dimen name="ingredient_padding_half">6dp</dimen>
+    <dimen name="seekbar_corner_radius">4dp</dimen>
 </resources>
