RA-14 fix. add font

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -44,11 +44,13 @@
 
     <style name="StyleTextIngredients">
         <item name="textAllCaps">true</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textColor">@color/description_categories_color</item>
     </style>
-    
+
     <style name="StyleTextCookingMethod">
         <item name="android:textColor">@color/description_categories_color</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textSize">14sp</item>
     </style>
 
