--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -95,9 +95,8 @@
                     android:id="@+id/sbPortionsCount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    style="@style/StyleSeekBar"
                     android:layout_marginTop="@dimen/ingredient_padding_half"
-                    android:max="5"
-                    android:min="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
