--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -54,4 +54,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="StyleSeekBar">
+        <item name="android:progressDrawable">@drawable/shape_seekbar_progress</item>
+        <item name="android:thumb">@drawable/shape_seekbar_thumb</item>
+        <item name="android:max">5</item>
+        <item name="android:min">1</item>
+    </style>
+
 </resources>
