RA-16. Add Favorites icon and color by click

--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -36,6 +36,19 @@
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Бургеры с грибами и сыром" />
 
+        <ImageButton
+            android:id="@+id/ibFavorites"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/main_padding"
+            android:layout_marginEnd="@dimen/main_padding"
+            android:focusable="true"
+            android:clickable="true"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/ic_favorites_empty" />
+
         <LinearLayout
             android:id="@+id/recipeLinearLayout"
             android:layout_width="0dp"
