--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="ingredient_padding">12dp</dimen>
     <dimen name="ingredient_padding_half">6dp</dimen>
     <dimen name="seekbar_corner_radius">4dp</dimen>
+    <dimen name="favorites_icon_margin">40dp</dimen>
+    <dimen name="zero_padding">0dp</dimen>
 </resources>
