--- a/app/src/main/res/layout/fragment_list_categories.xml
+++ b/app/src/main/res/layout/fragment_list_categories.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/imageCategories"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/zero_padding"
             android:layout_height="wrap_content"
             android:contentDescription="@string/screen_burger_categories"
             android:scaleType="centerCrop"
@@ -29,11 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_padding"
+            android:layout_marginEnd="@dimen/main_padding"
             android:layout_marginBottom="@dimen/main_padding"
             android:background="@drawable/shape_header_rounded"
             android:text="@string/title_categories"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Бургеры с грибами и сыром Бургеры с грибами и сыромБургеры с грибами и сыром" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
